# GNN-Airbnb

./: main.py  pyproject.toml
