[project]
name = "gnn-airbnb-exercise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "esda>=2.9.0",
    "folium>=0.20.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "libpysal>=4.14.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pandas>=3.0.1",
    "pytorch-lightning>=2.6.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
]
